# jakeopdae

./: .gitignore  DESIGN.md  LICENSE  README.md  dev-gui.bat  pyproject.toml  pytest.ini
.github/workflows/: release.yml
docs/: CODE_SIGNING.md  RECORDING_GIFS.md
examples/: full-coverage.yaml  hangul-otp-notify.yaml  hybrid-watch.yaml  image-trigger.yaml  otp-pattern.yaml  schedule-daily.yaml  self-test.yaml  simple-click.yaml  web-training.yaml
keymacro/: __init__.py  __main__.py  cli.py
keymacro/core/: __init__.py  browser_url.py  capture.py  chrome_launcher.py  clipboard.py  control.py  http_client.py  input.py  logger.py  matcher.py  observer.py  ocr.py  preflight.py  recorder.py  runner.py  shortcut.py  updates.py  web.py  (+3 more)
packaging/: keymacro-console.spec  keymacro.spec  make_icon.py
tests/: conftest.py  test_call_macro.py  test_chrome_launcher.py  test_clipboard.py  test_clipboard_otp_trigger.py  test_control.py  test_failure_branching.py  test_failure_preview.py  test_fonts.py  test_hangul_typing.py  test_history.py  test_http_action.py  test_humanization.py  test_hybrid_trigger.py  test_library.py  test_logger_setup.py  test_matcher.py  test_models.py  test_notify_action.py  test_ocr_and_variables.py  test_parallel_mode.py  test_preflight.py  test_recorder.py  test_runner.py  test_runner_extras.py  test_schedule.py  test_shortcut_and_updates.py  test_step_form_combos.py  test_step_form_logic.py  test_telegram.py  test_toast.py  test_variable_expressions.py  test_web.py  test_web_picker.py  test_window_resize.py  test_yaml_repo.py  test_zip_archive.py
(+49 files in other folders)
