[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keymacro"
version = "0.1.0"
description = "Lightweight image-recognition + click macro engine"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.8",
    "numpy>=1.26",
    "mss>=9.0",
    "pynput>=1.7",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
gui = [
    "PySide6>=6.7",
]
notify = [
    "requests>=2.31",
]
web = [
    "playwright>=1.46",
]
browser-uia = [
    "uiautomation>=2.0; sys_platform == 'win32'",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
]

[project.scripts]
keymacro = "keymacro.cli:main"

[tool.setuptools.packages.find]
include = ["keymacro*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
keymacro = ["ui/assets/fonts/*.ttf"]
